# python-project-manager

./: .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs  ppm_functions.rs  project_creator.rs  project_managers.rs  settings.rs  utils.rs
