[package]
name = "ppm"
version = "1.1.2-alpha"
edition = "2021"
author = "Fusen"
description = "PPM is a project manager for Python"


[dependencies]
clap = { version = "3.2.8", features = ["derive"]}
rust-ini = "0.18"
colored = "2.0.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"